--- a/savmet.html
+++ b/savmet.html
@@ -13,7 +13,7 @@
 <div class="title">
 <h1>  SAVMET  PRAKASHANS</h1>
 
-<img src="logo savmet.png"/>
+<img src="logo savmet.PNG"/>
 </div>
 <div class="options">
 <a href="#footer">GET PUBLISHED </a>
