--- a/savmet2.html
+++ b/savmet2.html
@@ -9,7 +9,7 @@
 
 
 <div class="logo">
-<img id="b" src="savmet white logo.png" width="140" height="140">
+<img id="b" src="savmet white logo.PNG" width="140" height="140">
 </div>
 <div class="social">
 <a href="https://www.pinterest.com" target="_blank"><img src="pin.jpg" width="40" height="40"></a>
