--- a/savmet.html
+++ b/savmet.html
@@ -74,19 +74,19 @@ Thank you for visiting our site we will look forward to hearing from you!!!
 
 <ul class="sticky">
 
-<li> <a href="www.facebook.com" target="_blank"><img width="32" height="32" title="" alt="" src="facebook.png" /></a>
+<li> <a href="https://www.facebook.com" target="_blank"><img width="32" height="32" title="" alt="" src="facebook.png" /></a>
 
 <p>Facebook</p>
 
 </li>
 
-<li> <a href="www.twitter.com" target="_blank"><img width="32" height="32" title="" alt="" src="twitter.jpg" /></a>
+<li> <a href="https://www.twitter.com" target="_blank"><img width="32" height="32" title="" alt="" src="twitter.jpg" /></a>
 
 <p>Twitter</p>
 
 </li>
 
-<li> <a href="www.instagram.com" target="_blank"><img width="32" height="32" title="" alt="" src="insta.jpg" /></a>
+<li> <a href="https://www.instagram.com" target="_blank"><img width="32" height="32" title="" alt="" src="insta.jpg" /></a>
 
 <p>Instagram</p>
 
